objects/lightsideapps__Query_Filter__c.object
<CustomObject>
    <description>Detail records for &apos;Query Object&apos; Master</description>
    <fields>
        <fullName>lightsideapps__Field__c</fullName>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Filter_Number__c</fullName>
        <description>Stores the Filter Number ie What order the filter is entered. Used on generating the Filter Logic</description>
        <label>Filter Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>=</fullName>
                    <default>true</default>
                    <label>=</label>
                </value>
                <value>
                    <fullName>!=</fullName>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                </value>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&gt;=</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>ends with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
                <value>
                    <fullName>includes</fullName>
                </value>
                <value>
                    <fullName>excludes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lightsideapps__Query_Object__c</fullName>
        <description>Query Object is the Master Record to the Query Filter</description>
        <label>Query Object</label>
        <referenceTo>lightsideapps__Query_Object__c</referenceTo>
        <relationshipLabel>Query Filters</relationshipLabel>
        <relationshipName>Query_Filters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>lightsideapps__Value__c</fullName>
        <label>Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Query Filter</label>
    <nameField>
        <displayFormat>QFilter-{00000}</displayFormat>
        <label>Query Filter Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Query Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>